# mcp_prototype

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
src/: openapi_tool_server.py  server.py
