[project]
name = "mcp-prototype"
version = "0.1.0"
description = ""
authors = [
    {name = "Emil",email = "emiljohansson0211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false